⚙chore(editor) disable overflow on TOC to prevent scroll shift

--- a/src/app/editor/editor.component.scss
+++ b/src/app/editor/editor.component.scss
@@ -271,6 +271,7 @@
     .toc {
 
         transition: width 200ms ease;
+        overflow: hidden;
 
         .toc__inner {
             width: 240px;
